[workspace]
members = [
  "massa-api",
  "massa-api-exports",
  "massa-async-pool",
  "massa-bootstrap",
  "massa-client",
  "massa-cipher",
  "massa-consensus-exports",
  "massa-consensus-worker",
  "massa-db-exports",
  "massa-db-worker",
  "massa-executed-ops",
  "massa-execution-exports",
  "massa-execution-worker",
  "massa-factory-exports",
  "massa-factory-worker",
  "massa-channel",
  "massa-consensus-exports",
  "massa-consensus-worker",
  "massa-hash",
  "massa-logging",
  "massa-metrics",
  "massa-models",
  "massa-node",
  "massa-sdk",
  "massa-storage",
  "massa-pool-worker",
  "massa-pool-exports",
  "massa-protocol-exports",
  "massa-protocol-worker",
  "massa-module-cache",
  "massa-serialization",
  "massa-signature",
  "massa-time",
  "massa-wallet",
  "massa-ledger-worker",
  "massa-ledger-exports",
  "massa-final-state",
  "massa-pos-exports",
  "massa-pos-worker",
  "massa-versioning",
  "massa-grpc",
  "massa-xtask",
]
resolver = "2"

# From https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3 # Speed-up the CI

# # Features
#
# * testing: enable some tests specific exports.
# Usage: add testing = ["massa_crate/testing", ...] to dev-dependencies to use test specific functions avaible in massa-crate.
# Do not add as a regular dependency. Never.
#
# * sandbox: for testing purpose, genesis timestamps is set as now + 9 seconds.
# The saved snapshot can then be used to restart the network from the snapshot.
[workspace.dependencies]
# Internal packages
massa_api = {path = "./massa-api"}
massa_api_exports = {path = "./massa-api-exports"}
massa_async_pool = {path = "./massa-async-pool"}
massa_bootstrap = {path = "./massa-bootstrap"}
massa_channel = {path = "./massa-channel"}
massa_cipher = {path = "./massa-cipher"}
massa_consensus_exports = {path = "./massa-consensus-exports"}
massa_consensus_worker = {path = "./massa-consensus-worker"}
massa_db_exports = {path = "./massa-db-exports"}
massa_db_worker = {path = "./massa-db-worker"}
massa_executed_ops = {path = "./massa-executed-ops"}
massa_execution_exports = {path = "./massa-execution-exports"}
massa_execution_worker = {path = "./massa-execution-worker"}
massa_factory_exports = {path = "./massa-factory-exports"}
massa_factory_worker = {path = "./massa-factory-worker"}
massa_final_state = {path = "./massa-final-state"}
massa_grpc = {path = "./massa-grpc"}
massa_hash = {path = "./massa-hash"}
massa_ledger_exports = {path = "./massa-ledger-exports"}
massa_ledger_worker = {path = "./massa-ledger-worker"}
massa_logging = {path = "./massa-logging"}
massa_metrics = {path = "./massa-metrics"}
massa_models = {path = "./massa-models"}
massa_module_cache = {path = "./massa-module-cache"}
massa_pool_exports = {path = "./massa-pool-exports"}
massa_pool_worker = {path = "./massa-pool-worker"}
massa_pos_exports = {path = "./massa-pos-exports"}
massa_pos_worker = {path = "./massa-pos-worker"}
massa_protocol_exports = {path = "./massa-protocol-exports"}
massa_protocol_worker = {path = "./massa-protocol-worker"}
massa_sdk = {path = "./massa-sdk"}
massa_serialization = {path = "./massa-serialization"}
massa_signature = {path = "./massa-signature"}
massa_storage = {path = "./massa-storage"}
massa_time = {path = "./massa-time"}
massa_versioning = {path = "./massa-versioning"}
massa_wallet = {path = "./massa-wallet"}

# Massa projects dependencies
massa-proto-rs = {git = "https://github.com/massalabs/massa-proto-rs", "rev" = "32179e2"}
massa-sc-runtime = {git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "main"}
peernet = {git = "https://github.com/massalabs/PeerNet", "branch" = "deactivate_stream_limiter"}

# Common dependencies
transition = {git = "https://github.com/massalabs/transition.git", "rev" = "93fa3bf82f9f5ff421c78536879b7fd1b948ca75"}
unsigned-varint = {version = "0.7.1", "git" = "https://github.com/cyphar/unsigned-varint.git", "branch" = "nom6-errors"}
substruct = {git = "https://github.com/sydhds/substruct", branch = "main"}
machine = {git = "https://github.com/antifuchs/machine", "branch" = "fix-workspace-build"}
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1.58"
atty = "0.2"
bitvec = "1.0"
blake3 = "=1.3"
bs58 = "=0.4"
config = "0.13"
console = "0.15"
criterion = "0.4"
crossbeam = "0.8"
crossbeam-channel = "0.5"
ctrlc = "3.2.5"
dialoguer = "0.10"
directories = "4.0"
displaydoc = "0.2"
ed25519-dalek = "=1.0"
erased-serde = "0.3"
futures = "0.3.18"
futures-util = "0.3.25"
generic-array = "0.14.7"
h2 = "0.3.17"
hex-literal = "0.3.4"
http = "0.2.8"
humantime = "2.1.0"
hyper = "0.14.25"
itertools = "0.10"
jsonrpsee = "0.19.0"
jsonrpsee-http-client = "0.19.0"
jsonrpsee-ws-client = "0.19.0"
lazy_static = "1.4.0"
libsecp256k1 = "0.7.1"
lsmtree = "=0.1.1"
mio = "0.8"
mockall = "0.11.4"
more-asserts = "0.3"
nom = "=7.1"
num = "0.4"
num_enum = "0.5"
paginate = "1.1.11"
parking_lot = "0.12"
paw = "1.0"
pbkdf2 = "0.11"
prometheus = "0.13.3"
rand = "0.8"
rand_distr = "=0.4.3"
rand_xoshiro = "0.6"
rayon = "1.7.0"
rocksdb = "0.20"
rust_decimal = "1.26"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
schnellru = "0.2.0"
serde = "1.0"
serde_json = "1.0.87"
serde_qs = "0.11"
serde_with = "2.1.0"
serial_test = "1.0.0"
sha2 = "0.10.6"
sha3 = "0.10.8"
socket2 = "0.4.7"
structopt = "0.3"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.5"
thiserror = "1.0"
time = "0.3"
tokio = "1.23"
tokio-stream = "0.1"
toml_edit = "0.19"
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-reflection = "0.9.2"
tonic-web = "0.9.2"
tower = "0.4.13"
tower-http = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3.3"
