[package]
name = "api-dto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# custom modules
models = {path = "../models"}
time = {path = "../time"}
