[package]
name = "api-private"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
# custom modules
crypto = {path = "../crypto"}
api-dto = { path = "../api-dto" }
models = {path = "../models"}
