[package]
name = "api-private"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
# custom modules
crypto = {path = "../crypto"}
api-dto = { path = "../api-dto" }
models = {path = "../models"}
communication = {path = "../communication"}
consensus = {path = "../consensus"}
time = {path = "../time"}
rpc-server = {path = "../rpc-server"}
thiserror = "1.0"

tokio = { version = "1.11", features = ["full"] }
