[package]
name = "api-private"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
tokio = { version = "1.11", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
# custom modules
crypto = {path = "../crypto"}
communication = {path = "../communication"}
consensus = {path = "../consensus"}
models = {path = "../models"}
time = {path = "../time"}
