[package]
name = "api-public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
thiserror = "1.0"
tracing = "0.1"
# custom modules
models = {path = "../models"}
time = {path = "../time"}
tokio = { version = "1.11", features = ["full"] }
consensus = {path = "../consensus"}
network = {path = "../network"}
crypto = {path = "../crypto"}
pool = {path = "../pool"}
storage = {path = "../storage"}
