[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
tracing = "0.1"
futures = { version = "0.3" }
# custom modules
consensus = {path = "../consensus"}
crypto = {path = "../crypto"}
models = {path = "../models"}
network = {path = "../network"}
pool = {path = "../pool"}
protocol-exports = {path = "../protocol-exports"}
storage = {path = "../storage"}
time = {path = "../time"}
