[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
futures = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
tracing = "0.1"
# custom modules
consensus = { path = "../consensus" }
massa_hash = { path = "../massa_hash" }
models = { path = "../models" }
network = { path = "../network" }
pool = { path = "../pool" }
protocol-exports = { path = "../protocol-exports" }
signature = { path = "../signature" }
time = { path = "../time" }
