[package]
name = "apimodel"
version = "0.1.0"
authors = ["musitdev <philippe.delrieu@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logging = { path = "../logging" }
serde = { version = "1.0", features = ["derive"] }
models = {path = "../models"}
crypto = {path = "../crypto"}
log = { version = "0.4" }
communication = {path = "../communication"}
consensus = {path = "../consensus"}
time = {path = "../time"}
chrono = "0.4.19"
