[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Massa Labs <contact@massa.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { path = "../consensus" }
crypto = { path = "../crypto" }
models = { path = "../models" }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.5"
time = {path = "../time"}
rand = { version = "0.8"}

log = { version = "0.4" }