[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { path = "../consensus" }
crypto = { path = "../crypto" }
models = { path = "../models" }
communication = {path = "../communication"}
tokio = { version = "1.11", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.5"
time = {path = "../time"}
logging = {path = "../logging"}
serde_json = { version = "1.0" }
rand = { version = "0.8"}
log = { version = "0.4" }

[dev-dependencies]
stderrlog = { version = "0.5" }
pretty_assertions = "0.7"
serial_test = "0.5"
bitvec = { version = "0.22", features = ["serde"] }
