[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
futures = "0.3"
lazy_static = "1.4.0"
num_enum = "0.5"
rand = { version = "0.8"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
tracing = "0.1"
# custom modules
consensus = { path = "../consensus" }
massa_hash = { path = "../massa_hash" }
logging = {path = "../logging"}
models = { path = "../models" }
network = {path = "../network"}
signature = { path = "../signature" }
time = {path = "../time"}

[dev-dependencies]
bitvec = { version = "0.22", features = ["serde"] }
pretty_assertions = "1.0"
serial_test = "0.5"
