[package]
name = "communication"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = { version = "0.3" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
serde_json = { version = "1.0" }
itertools = "0.10"
rand = { version = "0.8"}
thiserror = "1.0"
num_enum = "0.5"

logging = { path = "../logging" }
crypto = { path = "../crypto" }
models = { path = "../models" }
time = { path = "../time" }


[dev-dependencies]
stderrlog = { version = "0.5" }
pretty_assertions = "0.7"
tempfile = "3.2"
serial_test = "0.5.1"
