[package]
name = "communication"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
itertools = "0.10"
log = { version = "0.4" }
num_enum = "0.5"
rand = { version = "0.8"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
toml = { version = "0.5" }
# custom modules
crypto = { path = "../crypto" }
logging = { path = "../logging" }
models = { path = "../models" }
time = { path = "../time" }


[dev-dependencies]
pretty_assertions = "0.7"
serial_test = "0.5.1"
stderrlog = { version = "0.5" }
tempfile = "3.2"
