[package]
name = "consensus"
version = "0.1.0"
authors = ["Massa Labs <contact@massa.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = { version = "0.3" }
rand_xoshiro = "0.6"
crypto = {path = "../crypto"}
communication = {path = "../communication"}
logging = { path = "../logging" }
rand = { version = "0.8"}
serde = { version = "1.0", features = ["derive"] }
models = {path = "../models"}
flexbuffers = { version = "0.2" }
serde_json = { version = "1.0" }
log = { version = "0.4" }
thiserror = "1.0"
num = "0.3.1"
time= { path = "../time"}
storage= { path = "../storage"}

[dev-dependencies]
stderrlog = { version = "0.5" }
pretty_assertions = "0.6"
tempfile = "3.2"
