[package]
name = "crypto"
version = "0.1.0"
authors = ["Massa Labs <contact@massa.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.9.4"
secp256k1 = { version = "0.19.0", features = ["rand-std", "serde", "bitcoin_hashes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
flexbuffers = { version = "0.2" }
bs58 = { version = "0.4", features = ["check"] }
rand = { version = "0.7.3"}  # force old version for compatibility

