[package]
name = "execution"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
models = {path = "../models"}
massa_hash = {path = "../massa_hash"}
parking_lot = { version = "0.11.2" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
wasmer = "2.0.0"

[dev-dependencies]
serial_test = "0.5"