[package]
name = "execution"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
models = {path = "../models"}
crypto = {path = "../crypto"}
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }

[dev-dependencies]
serial_test = "0.5"