[package]
name = "hang-monitor"
version = "0.1.0"
authors = ["Massa Labs <contact@massa.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
logging = { path = "../logging" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { path = "../time"}
tokio = { version = "1.0", features = ["full"] }
