[package]
name = "hang_monitor"
version = "0.1.0"
authors = ["Massa Labs <contact@massa.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }

log = { version = "0.4" }