[package]
name = "jsonrpc-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
#jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
jsonrpc-dto = { path = "../jsonrpc-dto" }
