[package]
name = "jsonrpc-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }
tokio = { version = "1", features = ["full"] }
# custom modules
jsonrpc-dto = { path = "../jsonrpc-dto" }
