[package]
name = "jsonrpc-dto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
# custom modules
crypto = {path = "../crypto"}
models = {path = "../models"}
time = {path = "../time"}
