[package]
name = "logging"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
serde_json = { version = "1.0" }

[dev-dependencies]
pretty_assertions = "0.7"
serial_test = "0.5"
stderrlog = { version = "0.5" }
